# rescale-take-home

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/config/: settings.py
backend/jobs/: apps.py  constants.py
backend/jobs/api/: serializers.py  urls.py  views.py
backend/jobs/migrations/: 0001_initial.py
backend/jobs/models/: __init__.py  job.py  job_status.py
backend/jobs/services/: job_service.py
backend/tests/api/: test_job_serializers.py  test_job_views.py
backend/tests/services/: test_job_service.py
e2e/: Dockerfile  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: job-creation.spec.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: tsconfig.json
frontend/src/__tests__/api/: jobs.test.ts
frontend/src/__tests__/components/: ConfirmDeleteModal.test.tsx  CreateJobModal.test.tsx  JobHistory.test.tsx  JobList.test.tsx  JobPreview.test.tsx
frontend/src/__tests__/hooks/: useDebounce.test.ts  useJobDetail.test.ts  useJobs.test.ts
frontend/src/api/: jobs.ts
frontend/src/components/: ConfirmDeleteModal.tsx  CreateJobModal.tsx  JobHistory.tsx  JobList.tsx  JobPreview.tsx  Modal.tsx  NavBar.tsx
frontend/src/constants/: jobStatus.ts  pagination.ts
frontend/src/hooks/: useJobDetail.ts  useJobs.ts
frontend/src/pages/: Dashboard.tsx  JobDetail.tsx
frontend/src/types/: job.ts
(+1 files in other folders)
